# sysml-v2-parser

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: BNF_COMPLIANCE_MATRIX.md  BNF_COVERAGE.md  CORPUS_MBSE_VACUUM_PARSER_SPEC42_FEEDBACK.md  LANGUAGE_SERVER_BACKLOG.md  PARSER_BACKLOG_ROADMAP.md  PARSER_DEBT_P1_PLAN.md  PARSER_DEBT_P2_PLAN.md  PARSER_DEBT_P3_PLAN.md  PARSER_DEBT_P4_PLAN.md  PARSER_TECHNICAL_DEBT.md  SPEC42-DIAGNOSTICS-PARSER-IMPROVEMENTS.md  SYSML_V2_COMPLIANCE_GAP.md  bnf_coverage.map
examples/: parse_check.rs
scripts/: fetch-sysml-v2-release.ps1  fetch-sysml-v2-release.sh
src/: ast.rs  error.rs  lib.rs
src/ast/: behavior.rs  common.rs  core.rs  kerml_fallback.rs  mod.rs  package.rs  requirement.rs  root.rs  structure.rs  view.rs
src/parser/: action.rs  alias.rs  allocation.rs  attribute.rs  bnf_surface.rs  body.rs  case.rs  collect_errors.rs  connection.rs  constraint.rs  definition_header.rs  definition_prefix.rs  dependency.rs  diagnostic_catalog.rs  diagnostics.rs  enumeration.rs  expr.rs  flow.rs  import.rs  individual.rs  interface.rs  item.rs  lex.rs  metadata.rs  metadata_annotation.rs  mod.rs  occurrence.rs  occurrence_body.rs  package.rs  (+11 more)
tests/: apollo_regressions.rs  attribute_unit_catalog_body.rs  bnf_compliance.rs  calc_return_expression.rs  mbse_vacuum_corpus.rs  parser_panic_safety.rs  parser_tests.rs  recovery_actions.rs  recovery_body_scopes.rs  recovery_diagnostics_integration.rs  require_constraint_expressions.rs  spec42_diagnostics_ast.rs  vacuuming_types_parse.rs  validation.rs
(+45 files in other folders)
