[package]
name = "sysml-v2-parser"
version = "0.24.0"
edition = "2021"
rust-version = "1.82"
description = "SysML v2 textual notation parser for Rust"
license = "MIT"
repository = "https://github.com/elan8/sysml-v2-parser"
readme = "README.md"
keywords = ["sysml", "parser", "modeling", "kerml"]
categories = ["parser-implementations"]
exclude = ["sysml-v2-release/*", "target/*", "test-logs/*"]

[dependencies]
log = "0.4"
nom = "8"
nom_locate = "5"

[dev-dependencies]
criterion = "0.5"
env_logger = "0.11"
log = "0.4"
proptest = "1"

[[bench]]
name = "parser_bench"
harness = false
